--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="icon" href="images/egyptian.png"/><!--Icon made by Freepik from www.flaticon.com-->
     <link href="https://fonts.googleapis.com/css?family=Alatsi|Oswald:400,500&display=swap" rel="stylesheet"><!--Google Fonts-->
     <link rel="stylesheet" href="http://foundation.zurb.com/sites/docs/assets/css/docs.css"><!-- Foundation css-->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://thuertas.github.io/suzannecollins/css/main.css">
 </head>
 <body>
     <!--HEADER-->
@@ -261,9 +261,9 @@
     </footer>
     <!--END OF FOOTER-->
 <!--The following scripts come with Foundation-->
-<script src="js/vendor/jquery.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.js"></script>
-<script src="js/app.js"></script>
+<script src="https://thuertas.github.io/suzannecollins/js/vendor/jquery.js"></script>
+<script src="https://thuertas.github.io/suzannecollins/js/vendor/what-input.js"></script>
+<script src="https://thuertas.github.io/suzannecollins/js/vendor/foundation.js"></script>
+<script src="https://thuertas.github.io/suzannecollins/js/app.js"></script>
 </body>
 </html>
