--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Suzanne Collins</title>
     <link rel="icon" type="icon" href="images/egyptian.png"/><!--Icon made by Freepik from www.flaticon.com-->
     <link href="https://fonts.googleapis.com/css?family=Alatsi|Oswald:400,500&display=swap" rel="stylesheet"><!--Google Fonts-->
-    <link rel="stylesheet" href="https://thuertas.github.io/suzannecollins/css/foundation.css"><!-- Foundation css-->
-    <link rel="stylesheet" href="https://thuertas.github.io/suzannecollins/css/main.css">
+    <link rel="stylesheet" href="css/foundation.css"><!-- Foundation css-->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!--HEADER-->
