--- a/reviews.html
+++ b/reviews.html
@@ -74,21 +74,21 @@
                         <div class="row text-center">
                             <div class="medium-6 column">
                                 <p>
-                                    <h5 class="margin-top-2"><a href="">YEAR OF THE JUNGLE</a></h5>
+                                    <h5 class="margin-top-2"><a href="additional pages/year-review.html">YEAR OF THE JUNGLE</a></h5>
                                 </p>
                                 <div class="margin-right-0">
-                                    <img style="width: 260px;" src="images/jungle.png" alt="pile of books and glasses on top"><!--Image taken from: https://www.britannica.com/biography/Suzanne-Collins-->
-                                    <img style="width: 100px;" src="images/star rating.png" alt="pile of books and glasses on top"><!--Made in Adobe XD-->
+                                    <img style="width: 260px;" src="images/jungle.png" alt="Year of the jungle"><!--Image taken from http://www.suzannecollinsbooks.com/-->
+                                    <img style="width: 100px;" src="images/star rating.png" alt="Rating stars"><!--Made in Adobe XD-->
                                 </div>
                             </div>
                             <div class="medium-6 column">
                                 <p>
-                                    <h5 class="margin-top-2"><a href="">THE MOCKINGJAY</a></h5>
+                                    <h5 class="margin-top-2"><a href="additional pages/mockingjay-review.html">THE MOCKINGJAY</a></h5>
                                 </p>
                                 <div class="margin-right-0">
-                                    <img style="height: 200px;" src="images/jay.png" alt="pile of books and glasses on top"><!--Image taken from: https://www.britannica.com/biography/Suzanne-Collins-->
+                                    <img style="height: 200px;" src="images/jay.png" alt="pile of books and glasses on top"><!--Image taken from http://www.suzannecollinsbooks.com/-->
                                     <br>
-                                    <img style="width: 100px;" src="images/star rating.png" alt="pile of books and glasses on top"><!--Made in Adobe XD-->
+                                    <img style="width: 100px;" src="images/star rating.png" alt="rating stars"><!--Made in Adobe XD-->
                                 </div>
                             </div>
                         </div>
@@ -96,17 +96,17 @@
                     <div class="blog-post row margin-top-2 margin-bottom-2 text-center"><!--second row of books-->
                         <div class="medium-6 column">
                             <p>
-                                <h5 class="margin-top-2"><a href="">CATCHING FIRE</a></h5>
+                                <h5 class="margin-top-2"><a href="additional pages/fire-review.html">CATCHING FIRE</a></h5>
                             </p>
                             <div class="margin-right-0">
-                                <img style="height: 200px;" src="images/fire.png" alt="pile of books and glasses on top"><!--Image taken from: https://www.britannica.com/biography/Suzanne-Collins-->
+                                <img style="height: 200px;" src="images/fire.png" alt="pile of books and glasses on top"><!--Image taken from http://www.suzannecollinsbooks.com/-->
                                 <br>
-                                <img style="width: 100px;" src="images/star rating.png" alt="pile of books and glasses on top"><!--Made in Adobe XD-->
+                                <img style="width: 100px;" src="images/star rating.png" alt="rating stars"><!--Made in Adobe XD-->
                             </div>
                         </div>
                         <div class="medium-6 column">
                             <p>
-                                <h5 class="margin-top-2"><a href="">THE HUNGER GAMES</a></h5>
+                                <h5 class="margin-top-2"><a href="additional pages/game-review.html">THE HUNGER GAMES</a></h5>
                             </p>
                             <div class="margin-right-0">
                                 <img style="height: 200px;" src="images/hunger.png" alt="pile of books and glasses on top"><!--Image taken from: https://www.britannica.com/biography/Suzanne-Collins-->
@@ -149,10 +149,10 @@
                             <h4><small>List of reviews</small></h4>
                             <hr>
                             <ul class="no-bullet menu vertical">
-                                <li class="no-guillemet"><a href="#year">Year of the Jungle</a></li>
-                                <li><a href="#jay">Mockingjay</a></li>
-                                <li><a href="#fire">Catching Fire</a></li>
-                                <li><a href="#games">The Hunger Games</a></li>
+                                <li class="no-guillemet"><a href="additional pages/year-review.html">Year of the Jungle</a></li>
+                                <li><a href="additional pages/mockingjay-review.html">Mockingjay</a></li>
+                                <li><a href="additional pages/fire-review.html">Catching Fire</a></li>
+                                <li><a href="additional pages/game-review.html">The Hunger Games</a></li>
                             </ul>
                         </div>
                     </div>
