--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                     </div>
                     <div class="blog-post align-center text-center">
                         <h3 class="margin-top-2">MOVIE TIE-IN EDITION IS NOW AVAILABLE!</h3>
-                        <img class="align-center" src="images/Ballad.png" alt="">
+                        <img class="align-center" src="images/mockingjat.png" alt="">
                         <h5>THE HUNGER GAMES: MOCKINGJAY</h5>
                     </div>
                     <div class="blog-post align-center text-center">
                         <h3 class="margin-top-2">YEAR OF THE JUNGLE</h3>
-                        <img class="align-center" src="images/Ballad.png" alt="">
+                        <img class="align-center" src="images/jungle.png" alt="">
                         <!--the following external link was provided in the original webiste: http://www.suzannecollinsbooks.com/ but apparently doesnt work-->
                         <a class="button primary" href="http://dialedin.com/scholastic10/Year_of_the_Jungle" target="_blank" rel="noopener noreferrer">Click here to watch Suzanne Collins and James Proimos talk about the book!</a>
                     </div>
